[gd_scene load_steps=12 format=3 uid="uid://cowj1v5ikbbcr"]

[ext_resource type="Texture2D" uid="uid://33g80p0qnfw4" path="res://sprites/world/background.svg" id="1_mkrgm"]
[ext_resource type="Texture2D" uid="uid://bi7ayrxnn7hex" path="res://sprites/clothes/icrazy_frame.svg" id="2_6ubqe"]
[ext_resource type="Texture2D" uid="uid://dteiup73cqn4o" path="res://sprites/clothes/lights.png" id="3_dv1xm"]
[ext_resource type="PackedScene" uid="uid://detf8uwimqp3v" path="res://scenes/zack_casey.tscn" id="4_62lrl"]
[ext_resource type="Script" path="res://scripts/interface.gd" id="5_2hrl4"]
[ext_resource type="PackedScene" uid="uid://crwoe1shep3qn" path="res://scenes/wardrobe.tscn" id="6_63h3o"]
[ext_resource type="Texture2D" uid="uid://c6gjshrl66tx" path="res://sprites/symbols/file-upload.svg" id="7_3o5r4"]
[ext_resource type="Texture2D" uid="uid://nm7qfemlongu" path="res://sprites/symbols/file-upload-disabled.svg" id="8_6btbd"]
[ext_resource type="Texture2D" uid="uid://dvwfmf3d8owqa" path="res://sprites/symbols/file-download.svg" id="9_k60o7"]
[ext_resource type="Texture2D" uid="uid://bqs56pcfa0uqh" path="res://sprites/symbols/file-download-disabled.svg" id="10_d8wi3"]
[ext_resource type="Texture2D" uid="uid://dgwys372lmwvh" path="res://sprites/symbols/trash.svg" id="11_pc3us"]

[node name="Game" type="Node"]

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(504.046, 202.426)
texture = ExtResource("1_mkrgm")

[node name="PictureFrame" type="Sprite2D" parent="."]
position = Vector2(127.602, 111.895)
texture = ExtResource("2_6ubqe")

[node name="Light3D" type="PointLight2D" parent="PictureFrame"]
position = Vector2(35.118, -14.56)
texture = ExtResource("3_dv1xm")

[node name="Character" parent="." instance=ExtResource("4_62lrl")]
position = Vector2(141.307, 225.012)

[node name="Container" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_2hrl4")
version = "2"

[node name="Wardrobe" parent="Container" instance=ExtResource("6_63h3o")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.33875
anchor_top = 0.054
anchor_right = 1.05
anchor_bottom = 0.9
offset_right = 6.10352e-05
theme = null

[node name="CenterBtns" type="CenterContainer" parent="Container"]
layout_mode = 0
anchor_left = 0.35125
anchor_top = 0.78
anchor_right = 0.9925
anchor_bottom = 0.874

[node name="ButtonCtr" type="HBoxContainer" parent="Container/CenterBtns"]
layout_mode = 2

[node name="ExportBtn" type="TextureButton" parent="Container/CenterBtns/ButtonCtr"]
layout_mode = 2
tooltip_text = "Export"
texture_normal = ExtResource("7_3o5r4")
texture_disabled = ExtResource("8_6btbd")

[node name="ImportBtn" type="TextureButton" parent="Container/CenterBtns/ButtonCtr"]
layout_mode = 2
tooltip_text = "Import"
texture_normal = ExtResource("9_k60o7")
texture_disabled = ExtResource("10_d8wi3")

[node name="ClearBtn" type="TextureButton" parent="Container/CenterBtns/ButtonCtr"]
layout_mode = 2
tooltip_text = "Clear"
texture_normal = ExtResource("11_pc3us")

[node name="VersionLbl" type="Label" parent="Container"]
layout_mode = 0
anchor_left = 0.88125
anchor_top = 0.944
anchor_right = 0.9825
anchor_bottom = 0.984
text = "0.0.0"

[connection signal="pressed" from="Container/CenterBtns/ButtonCtr/ExportBtn" to="Character" method="_on_SaveBtn_pressed"]
[connection signal="pressed" from="Container/CenterBtns/ButtonCtr/ImportBtn" to="Character" method="_on_LoadBtn_pressed"]
[connection signal="pressed" from="Container/CenterBtns/ButtonCtr/ClearBtn" to="Character" method="_on_clearBtn_pressed"]
